--- a/addresses/Cargo.toml
+++ b/addresses/Cargo.toml
@@ -1,26 +1,15 @@
 [package]
 name = "bitcoin-addresses"
 version = "0.0.0"
-authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
-license = "CC0-1.0"
-repository = "https://github.com/rust-bitcoin/rust-bitcoin"
+authors = ["Jacky Chen <softwarecheng@gmail.com>"]
+repository = "https://github.com/sat20-labs/rust-satsnet"
 description = "Bitcoin address"
 categories = ["cryptography::cryptocurrencies"]
-keywords = ["bitcoin", "types"]
-readme = "README.md"
+keywords = ["satsnet", "bitcoin", "types"]
 edition = "2021"
 rust-version = "1.63.0"
-exclude = ["tests", "contrib"]
 
 [features]
 default = ["std"]
 std = ["alloc"]
 alloc = []
-
-[dependencies]
-
-[dev-dependencies]
-
-[package.metadata.docs.rs]
-all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
