--- a/base58/Cargo.toml
+++ b/base58/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
 name = "base58ck"
 version = "0.1.0"
-authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
+authors = ["Jacky Chen <softwarecheng@gmail.com>"]
 license = "CC0-1.0"
-repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
+repository = "https://github.com/sat20-labs/rust-satsnet/"
 description = "Bitcoin base58 encoding with checksum."
 categories = ["cryptography::cryptocurrencies", "encoding"]
-keywords = ["bitcoin", "base58", "encode", "decode", "checksum"]
-readme = "README.md"
+keywords = ["satsnet", "bitcoin", "base58", "encode", "decode", "checksum"]
 edition = "2021"
 rust-version = "1.63.0"
-exclude = ["tests", "contrib"]
+
 
 [features]
 default = ["std"]
@@ -19,14 +18,9 @@ alloc = ["hashes/alloc", "internals/alloc"]
 
 [dependencies]
 hashes = { package = "bitcoin_hashes", version = "0.14.0", default-features = false }
-internals = { package = "bitcoin-internals", version = "0.3.0" }
+internals = { package = "satsnet-internals", version = "0.3.0" }
 
 [dev-dependencies]
-hex = { package = "hex-conservative", version = "0.2.0", default-features = false, features = ["alloc"] }
-
-[package.metadata.docs.rs]
-all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
-
-[lints.rust]
-unexpected_cfgs = { level = "deny", check-cfg = ['cfg(bench)', 'cfg(fuzzing)', 'cfg(kani)' ] }
+hex = { package = "hex-conservative", version = "0.2.0", default-features = false, features = [
+    "alloc",
+] }
