--- a/bitcoin/Cargo.toml
+++ b/bitcoin/Cargo.toml
@@ -1,17 +1,13 @@
 [package]
 name = "bitcoin"
 version = "0.32.0-rc1"
-authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
-license = "CC0-1.0"
-repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
-documentation = "https://docs.rs/bitcoin/"
-description = "General purpose library for using and interoperating with Bitcoin."
+authors = ["Jacky Chen <softwarecheng@gmail.com>"]
+repository = "https://github.com/sat20-labs/rust-satsnet/"
+description = "General purpose library for using and interoperating with satsnet."
 categories = ["cryptography::cryptocurrencies"]
-keywords = ["crypto", "bitcoin"]
-readme = "../README.md"
+keywords = ["satsnet", "crypto", "bitcoin"]
 edition = "2021"
 rust-version = "1.63.0"
-exclude = ["tests", "contrib"]
 
 # If you change features or optional dependencies in any way please update the "# Cargo features" section in lib.rs as well.
 [features]
@@ -54,20 +50,20 @@ hashes = { package = "bitcoin_hashes", version = "0.14.0", default-features = fa
 hex = { package = "hex-conservative", version = "0.2.0", default-features = false, features = [
     "alloc",
 ] }
-internals = { package = "bitcoin-internals", version = "0.3.0", features = [
+internals = { package = "satsnet-internals", version = "0.3.0", features = [
     "alloc",
 ] }
 io = { package = "bitcoin-io", version = "0.1.1", default-features = false, features = [
     "alloc",
 ] }
-primitives = { package = "bitcoin-primitives", version = "0.100.0", default-features = false, features = [
+primitives = { package = "satsnet-primitives", version = "0.100.0", default-features = false, features = [
     "alloc",
 ] }
 secp256k1 = { version = "0.29.0", default-features = false, features = [
     "hashes",
     "alloc",
 ] }
-units = { package = "statsnet-units", version = "0.1.0", default-features = false, features = [
+units = { package = "satsnet-units", version = "0.1.0", default-features = false, features = [
     "alloc",
 ] }
 
@@ -83,59 +79,10 @@ serde = { version = "1.0.103", default-features = false, features = [
 arbitrary = { version = "1", optional = true }
 
 [dev-dependencies]
-internals = { package = "bitcoin-internals", version = "0.3.0", features = [
+internals = { package = "satsnet-internals", version = "0.3.0", features = [
     "test-serde",
 ] }
 serde_json = "1.0.0"
 serde_test = "1.0.19"
 bincode = "1.3.1"
 hex_lit = "0.1.1"
-
-[target.'cfg(mutate)'.dev-dependencies]
-mutagen = { git = "https://github.com/llogiq/mutagen" }
-
-[package.metadata.docs.rs]
-all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
-
-[[example]]
-name = "bip32"
-
-[[example]]
-name = "handshake"
-required-features = ["rand-std"]
-
-[[example]]
-name = "ecdsa-psbt"
-required-features = ["std", "bitcoinconsensus"]
-
-[[example]]
-name = "ecdsa-psbt-simple"
-required-features = ["rand-std"]
-
-[[example]]
-name = "sign-tx-segwit-v0"
-required-features = ["rand-std"]
-
-[[example]]
-name = "sign-tx-taproot"
-required-features = ["rand-std"]
-
-[[example]]
-name = "taproot-psbt"
-required-features = ["rand-std", "bitcoinconsensus"]
-
-[[example]]
-name = "taproot-psbt-simple"
-required-features = ["rand-std"]
-
-[[example]]
-name = "sighash"
-
-[lints.rust]
-unexpected_cfgs = { level = "deny", check-cfg = [
-    'cfg(bench)',
-    'cfg(fuzzing)',
-    'cfg(kani)',
-    'cfg(mutate)',
-] }
