--- a/hashes/Cargo.toml
+++ b/hashes/Cargo.toml
@@ -1,17 +1,13 @@
 [package]
 name = "bitcoin_hashes"
 version = "0.14.0"
-authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
-license = "CC0-1.0"
-repository = "https://github.com/rust-bitcoin/rust-bitcoin"
-documentation = "https://docs.rs/bitcoin_hashes/"
+authors = ["Jacky Chen <softwarecheng@gmail.com>"]
+repository = "https://github.com/sat20-labs/rust-satsnet"
 description = "Hash functions used by the rust-bitcoin eccosystem"
 categories = ["algorithms"]
-keywords = [ "crypto", "bitcoin", "hash", "digest" ]
-readme = "README.md"
+keywords = ["satsnet", "crypto", "bitcoin", "hash", "digest"]
 edition = "2021"
 rust-version = "1.63.0"
-exclude = ["tests", "contrib"]
 
 [features]
 default = ["std"]
@@ -25,7 +21,6 @@ small-hash = []
 
 [dependencies]
 hex = { package = "hex-conservative", version = "0.2.0", default-features = false }
-
 bitcoin-io = { version = "0.1.1", default-features = false, optional = true }
 schemars = { version = "0.8.3", default-features = false, optional = true }
 serde = { version = "1.0", default-features = false, optional = true }
@@ -33,10 +28,3 @@ serde = { version = "1.0", default-features = false, optional = true }
 [dev-dependencies]
 serde_test = "1.0"
 serde_json = "1.0"
-
-[package.metadata.docs.rs]
-all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
-
-[lints.rust]
-unexpected_cfgs = { level = "deny", check-cfg = ['cfg(bench)', 'cfg(hashes_fuzz)', 'cfg(rust_v_1_64)' ] }
