--- a/io/Cargo.toml
+++ b/io/Cargo.toml
@@ -1,17 +1,13 @@
 [package]
 name = "bitcoin-io"
 version = "0.1.2"
-authors = ["Matt Corallo <birchneutea@mattcorallo.com>"]
-license = "CC0-1.0"
-repository = "https://github.com/rust-bitcoin/rust-bitcoin"
-documentation = "https://docs.rs/bitcoin-io/"
+authors = ["Jacky Chen <softwarecheng@gmail.com>"]
+repository = "https://github.com/sat20-labs/rust-satsnet"
 description = "Simple I/O traits for no-std (and std) environments"
 categories = ["no-std"]
-keywords = [ "io", "no-std" ]
-readme = "README.md"
+keywords = ["satsnet", "bitcoin", "io", "no-std"]
 edition = "2021"
 rust-version = "1.63.0"
-exclude = ["tests", "contrib"]
 
 [features]
 default = ["std"]
@@ -19,11 +15,4 @@ std = ["alloc"]
 alloc = []
 
 [dependencies]
-internals = { package = "bitcoin-internals", version = "0.3.0" }
-
-[package.metadata.docs.rs]
-all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
-
-[lints.rust]
-unexpected_cfgs = { level = "deny" }
+internals = { package = "satsnet-internals", version = "0.3.0" }
