--- a/units/Cargo.toml
+++ b/units/Cargo.toml
@@ -1,16 +1,13 @@
 [package]
-name = "statsnet-units"
+name = "satsnet-units"
 version = "0.1.2"
-authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
-license = "CC0-1.0"
-repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
+authors = ["Jacky Chen <softwarecheng@gmail.com>"]
+repository = "https://github.com/sat20-labs/rust-satsnet/"
 description = "Basic Bitcoin numeric units such as amount"
 categories = ["cryptography::cryptocurrencies"]
-keywords = ["bitcoin", "newtypes"]
-readme = "README.md"
+keywords = ["satsnet", "bitcoin", "newtypes"]
 edition = "2021"
 rust-version = "1.63.0"
-exclude = ["tests", "contrib"]
 
 [features]
 default = ["std"]
@@ -18,23 +15,8 @@ std = ["alloc", "internals/std"]
 alloc = ["internals/alloc"]
 
 [dependencies]
-internals = { package = "bitcoin-internals", version = "0.3.0" }
-
+internals = { package = "satsnet-internals", version = "0.3.0" }
 serde = { version = "1.0.103", default-features = false, features = [
     "derive",
 ], optional = true }
 arbitrary = { version = "1", optional = true }
-
-[dev-dependencies]
-internals = { package = "bitcoin-internals", version = "0.3.0", features = [
-    "test-serde",
-] }
-serde_test = "1.0"
-serde_json = "1.0"
-
-[package.metadata.docs.rs]
-all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
-
-[lints.rust]
-unexpected_cfgs = { level = "deny", check-cfg = ['cfg(kani)'] }
