--- a/addresses/Cargo.toml
+++ b/addresses/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bitcoin-addresses"
+name = "satsnet-addresses"
 version = "0.0.0"
 authors = ["Jacky Chen <softwarecheng@gmail.com>"]
 repository = "https://github.com/sat20-labs/rust-satsnet"
