--- a/bitcoin/Cargo.toml
+++ b/bitcoin/Cargo.toml
@@ -43,7 +43,7 @@ base58 = { package = "base58ck", version = "0.1.0", default-features = false, fe
     "alloc",
 ] }
 bech32 = { version = "0.11.0", default-features = false, features = ["alloc"] }
-hashes = { package = "bitcoin_hashes", version = "0.14.0", default-features = false, features = [
+hashes = { package = "satsnet_hashes", version = "0.14.0", default-features = false, features = [
     "alloc",
     "io",
 ] }
