--- a/hashes/Cargo.toml
+++ b/hashes/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bitcoin_hashes"
+name = "satsnet_hashes"
 version = "0.14.0"
 authors = ["Jacky Chen <softwarecheng@gmail.com>"]
 repository = "https://github.com/sat20-labs/rust-satsnet"
