--- a/io/Cargo.toml
+++ b/io/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bitcoin-io"
+name = "satsnet-io"
 version = "0.1.2"
 authors = ["Jacky Chen <softwarecheng@gmail.com>"]
 repository = "https://github.com/sat20-labs/rust-satsnet"
