--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ resolver = "2"
 [patch.crates-io.satsnet-addresses]
 path = "addresses"
 
-[patch.crates-io.base58ck]
+[patch.crates-io.satsnet-base58ck]
 path = "base58"
 
 [patch.crates-io.bitcoin]
