--- a/addresses/Cargo.toml
+++ b/addresses/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "satsnet-addresses"
 version = "0.0.0"
+license = "CC0-1.0"
 authors = ["Jacky Chen <softwarecheng@gmail.com>"]
 repository = "https://github.com/sat20-labs/rust-satsnet"
 description = "Bitcoin address"
