--- a/hashes/Cargo.toml
+++ b/hashes/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "satsnet_hashes"
 version = "0.14.0"
+license = "CC0-1.0"
 authors = ["Jacky Chen <softwarecheng@gmail.com>"]
 repository = "https://github.com/sat20-labs/rust-satsnet"
 description = "Hash functions used by the rust-bitcoin eccosystem"
