--- a/internals/Cargo.toml
+++ b/internals/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "satsnet-internals"
 version = "0.3.0"
+license = "CC0-1.0"
 authors = ["Jacky Chen <softwarecheng@gmail.com>"]
 repository = "https://github.com/sat20-labs/rust-satsnet/"
 description = "Internal types and macros used by satsnet-bitcoin ecosystem"
